RESOLVED FIXED17404
curl certification problem
https://bugs.webkit.org/show_bug.cgi?id=17404
Summary curl certification problem
Bin Chen
Reported 2008-02-16 23:31:17 PST
From http://curl.haxx.se/docs/sslcerts.html, the CA can be disabled in curl, and in default the firefox can access the https site without the ca-certification packages in ubuntu, so to useability, i think in default the gtk webkit should disable the CA in curl so that users won't feel curios why they can't browser the https web.
Attachments
fix this bug (1.24 KB, patch)
2008-02-17 07:07 PST, Bin Chen
alp: review+
Alp Toker
Comment 1 2008-02-17 06:16:05 PST
Yeah, I've seen people blog about WebKit not supporting SSL and it was quite a mystery. It turned out they were missing the certificate package. Do you know how we can work around this issue in the CURL http backend?
Bin Chen
Comment 2 2008-02-17 07:07:22 PST
Created attachment 19172 [details] fix this bug
Alp Toker
Comment 3 2008-02-17 07:36:47 PST
Comment on attachment 19172 [details] fix this bug r=me I will fix up the ChangeLog entry, replace 'FALSE' with 'false' and add a FIXME before landing.
Alp Toker
Comment 4 2008-02-17 07:38:06 PST
Landed in r30355.
Alp Toker
Comment 5 2008-02-17 15:55:10 PST
This was modified in r30359. You'll need to define the WEBKIT_IGNORE_SSL_ERRORS environment variable to enable this mode.
Note You need to log in before you can comment on or make changes to this bug.