2008-02-17  Bin Chen  <binary.chen@gmail.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17404
        Bug 17404: curl certification problem

        Disable SSL cert verification until we have a way of distributing
        certs and/or reporting SSL errors to the user.

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::startJob):


Canonical link: https://commits.webkit.org/24093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30355 268f45cc-cd09-0410-ab3c-d52691b4dbfc